--- a/pages/projects/projects.css
+++ b/pages/projects/projects.css
@@ -74,8 +74,9 @@ body {
   display: grid;
   place-items: center;
   min-height: 100vh;
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'AOS Icons', 'Helvetica Neue',
-    Helvetica, Arial, sans-serif, system-ui;
+  /* font-family: 'SF Pro Text', 'SF Pro Icons', 'AOS Icons', 'Helvetica Neue',
+    Helvetica, Arial, sans-serif, system-ui; */
+    font-family: 'Azeret Mono', monospace;
 }
 
 body::before {
