--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -24,7 +24,9 @@ body {
   display: grid;
   place-items: center;
   min-height: 100vh;
-  font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui;
+  /* font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui; */
+  font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
+
   margin: 0;
 }
 
