--- a/pages/experience/experience.css
+++ b/pages/experience/experience.css
@@ -10,7 +10,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui;
+    /* font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui; */
+    font-family: 'Azeret Mono', monospace;
     margin: 0;
 }
 
@@ -41,7 +42,8 @@ li:not(:last-of-type) {
 
 li::marker {
     font-size: clamp(.875rem, 1vw + 1rem, 2rem);
-    font-family: monospace;
+    /* font-family: monospace; */
+    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
     vertical-align: middle;
     font-weight: 100;
     color: hsl(0 0% 10% / 0.5);
