--- a/pages/experience/experience.css
+++ b/pages/experience/experience.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     /* font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui; */
-    font-family: 'Azeret Mono', monospace;
+    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
     margin: 0;
 }
 
