--- a/pages/projects/projects.css
+++ b/pages/projects/projects.css
@@ -76,7 +76,7 @@ body {
   min-height: 100vh;
   /* font-family: 'SF Pro Text', 'SF Pro Icons', 'AOS Icons', 'Helvetica Neue',
     Helvetica, Arial, sans-serif, system-ui; */
-    font-family: 'Azeret Mono', monospace;
+    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
 }
 
 body::before {
