--- a/pages/cover/cover.css
+++ b/pages/cover/cover.css
@@ -22,9 +22,18 @@ body {
   min-height: 100vh;
   /* font-family: 'SF Pro Text', 'SF Pro Icons', 'AOS Icons', 'Helvetica Neue',
     Helvetica, Arial, sans-serif, system-ui; */
-    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
+    /* font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif; */
     background: canvas;
   margin: 0;
+  font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif !important;
+}
+
+@font-face {
+  font-family: 'Migha-BoldExpandedCNTR';
+  src: url('../../fonts/Migha-BoldExpandedCNTR.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 body::before {
