--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -25,9 +25,18 @@ body {
   place-items: center;
   min-height: 100vh;
   /* font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui; */
-  font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
+  /* font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif; */
 
   margin: 0;
+  font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif !important;
+}
+
+@font-face {
+  font-family: 'Migha-BoldExpandedCNTR';
+  src: url('../../fonts/Migha-BoldExpandedCNTR.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 :where(main, section) {
