--- a/pages/experience/experience.css
+++ b/pages/experience/experience.css
@@ -11,8 +11,17 @@ body {
     display: flex;
     flex-direction: column;
     /* font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif, system-ui; */
-    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif;
+    /* font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif; */
     margin: 0;
+    font-family: 'Migha-BoldExpandedCNTR', Arial, sans-serif !important;
+}
+
+@font-face {
+  font-family: 'Migha-BoldExpandedCNTR';
+  src: url('../../fonts/Migha-BoldExpandedCNTR.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 header {
