--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -34,7 +34,6 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  padding-right: 50px; /* Add space for side navigation */
 }
 
 body::before {
@@ -178,12 +177,16 @@ footer {
   transform: rotateX(calc(var(--explode) * -24deg)) rotateY(calc(var(--explode) * -55deg)) translate3d(0, 0, calc(var(--explode) * 20vmin));
 }
 
-.clipper > header h1,
-.container > header h1 {
+:root:has(#explode:checked) {
+  --explode: 1;
+}
+
+:root:has(#explode:checked) .clipper > header h1,
+:root:has(#explode:checked) .container > header h1 {
   color: var(--fixer);
 }
 
-.container main {
+:root:has(#explode:checked) .container main {
   background: linear-gradient(transparent 50%, white 50%);
   position: relative;
   clip-path: inset(0 0 0 0);
@@ -333,12 +336,7 @@ main > div {
   outline: none;
 }
 
-/* Mobile Responsive Adjustments */
-@media (max-width: 768px) {
-  body {
-    padding-right: 40px;
-  }
-  
+@media (max-width: 600px) {
   .social-icons {
     gap: 1.5rem;
   }
@@ -346,44 +344,5 @@ main > div {
   .social-icon {
     width: 36px;
     height: 36px;
-  }
-  
-  h1 {
-    font-size: clamp(1.5rem, 6vw + 0.5rem, 8rem);
-  }
-  
-  p {
-    font-size: 1.5rem;
-  }
-  
-  .caption {
-    font-size: calc(var(--font-size) * 0.4);
-  }
-}
-
-@media (max-width: 480px) {
-  body {
-    padding-right: 35px;
-  }
-  
-  .social-icons {
-    gap: 1rem;
-  }
-  
-  .social-icon {
-    width: 32px;
-    height: 32px;
-  }
-  
-  h1 {
-    font-size: clamp(1.2rem, 5vw + 0.3rem, 6rem);
-  }
-  
-  p {
-    font-size: 1.2rem;
-  }
-  
-  .caption {
-    display: none;
   }
 }
